@@ -683,6 +683,23 @@ MODx.window.QuickCreateResource = function(config) {
                     ,id: 'modx-'+this.ident+'-menutitle'
                     ,fieldLabel: _('resource_menutitle')
                     ,anchor: '100%'
+                },{
+                    xtype: 'modx-combo-content-type'
+                    ,fieldLabel: _('resource_content_type')
+                    ,name: 'content_type'
+                    ,hiddenName: 'content_type'
+                    ,id: 'modx-'+this.ident+'-type'
+                    ,anchor: '70%'
+                    ,value: config.record.content_type || 1
+                    
+                },{
+                    xtype: 'modx-combo-content-disposition'
+                    ,fieldLabel: _('resource_contentdispo')
+                    ,name: 'content_dispo'
+                    ,hiddenName: 'content_dispo'
+                    ,id: 'modx-'+this.ident+'-dispo'
+                    ,anchor: '70%'
+                    ,value: config.record.content_dispo || 0                   
                 },
                 MODx.getQRContentField(this.ident,config.record.class_key)]
             },{
@@ -788,6 +805,23 @@ MODx.window.QuickUpdateResource = function(config) {
                     ,fieldLabel: _('introtext')
                     ,anchor: '100%'
                     ,height: 50
+                },{
+                    xtype: 'modx-combo-content-type'
+                    ,fieldLabel: _('resource_content_type')
+                    ,name: 'content_type'
+                    ,hiddenName: 'content_type'
+                    ,id: 'modx-'+this.ident+'-type'
+                    ,anchor: '70%'
+                    ,value: config.record.content_type || 1
+                    
+                },{
+                    xtype: 'modx-combo-content-disposition'
+                    ,fieldLabel: _('resource_contentdispo')
+                    ,name: 'content_dispo'
+                    ,hiddenName: 'content_dispo'
+                    ,id: 'modx-'+this.ident+'-dispo'
+                    ,anchor: '70%'
+                    ,value: config.record.content_dispo || 0                   
                 },
                 MODx.getQRContentField(this.ident,config.record.class_key)]
             },{
